--- a/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
+++ b/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>rest_api_template.Infra</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+  </ItemGroup>
+
+   <ItemGroup>
+         <ProjectReference Include = "..\..\Domain\rest-api-template.Domain\rest-api-template.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
