Fixing project references

--- a/src/Domain/rest-api-template.Domain.Core/rest-api-template.Domain.Core.csproj
+++ b/src/Domain/rest-api-template.Domain.Core/rest-api-template.Domain.Core.csproj
@@ -11,6 +11,6 @@
 
   <ItemGroup>
         <ProjectReference Include = "..\rest-api-template.Domain\rest-api-template.Domain.csproj" />
-        <ProjectReference Include = "..\..\Infra\rest-api-template.Infra\rest-api-template.Infra.csproj" />
+        <!-- <ProjectReference Include = "..\..\Infra\rest-api-template.Infra\rest-api-template.Infra.csproj" /> -->
   </ItemGroup>
 </Project>
