--- a/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
+++ b/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
@@ -11,6 +11,7 @@
 
    <ItemGroup>
          <ProjectReference Include = "..\..\Domain\rest-api-template.Domain\rest-api-template.Domain.csproj" />
+         <ProjectReference Include = "..\..\Domain\rest-api-template.Domain.Core\rest-api-template.Domain.Core.csproj" />
     </ItemGroup>
 
 </Project>
