Domain.Services csproj updated

--- a/src/Domain/rest-api-template.Domain.Services/rest-api-template.Domain.Services.csproj
+++ b/src/Domain/rest-api-template.Domain.Services/rest-api-template.Domain.Services.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>rest_api_template.Domain.Services</RootNamespace>
   </PropertyGroup>
 
+   <ItemGroup>
+        <ProjectReference Include = "..\rest-api-template.Domain\rest-api-template.Domain.csproj" />
+        <ProjectReference Include = "..\rest-api-template.Domain.Core\rest-api-template.Domain.Core.csproj" />
+
+   </ItemGroup>
 </Project>
