--- a/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
+++ b/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
@@ -12,6 +12,8 @@
    <ItemGroup>
          <ProjectReference Include = "..\..\Domain\rest-api-template.Domain\rest-api-template.Domain.csproj" />
          <ProjectReference Include = "..\..\Domain\rest-api-template.Domain.Core\rest-api-template.Domain.Core.csproj" />
+         <ProjectReference Include = "..\..\Application\rest-api-template.Application\rest-api-template.Application.csproj" />
+
     </ItemGroup>
 
 </Project>
