Moving mappers to application layer

--- a/src/Application/rest-api-template.Application/rest-api-template.Application.csproj
+++ b/src/Application/rest-api-template.Application/rest-api-template.Application.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>rest_api_template.Application</RootNamespace>
   </PropertyGroup>
 
+ <ItemGroup>
+    <ProjectReference Include = "..\..\Domain\rest-api-template.Domain\rest-api-template.Domain.csproj" />
+    <ProjectReference Include = "..\..\Domain\rest-api-template.Domain.Core\rest-api-template.Domain.Core.csproj" />
+  </ItemGroup>
 </Project>
