--- a/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
+++ b/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
@@ -6,13 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include = "..\..\Domain\rest-api-template.Domain\rest-api-template.Domain.csproj" />
-    <ProjectReference Include = "..\..\Domain\rest-api-template.Domain.Core\rest-api-template.Domain.Core.csproj" />
-    <ProjectReference Include = "..\..\Application\rest-api-template.Application\rest-api-template.Application.csproj" />
+    <ProjectReference Include="..\..\Domain\rest-api-template.Domain\rest-api-template.Domain.csproj" />
+    <ProjectReference Include="..\..\Domain\rest-api-template.Domain.Core\rest-api-template.Domain.Core.csproj" />
+    <ProjectReference Include = "..\..\Domain\rest-api-template.Domain.Services\rest-api-template.Domain.Services.csproj" />
+    <ProjectReference Include="..\..\Application\rest-api-template.Application\rest-api-template.Application.csproj" />
   </ItemGroup>
 
 </Project>
