--- a/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
+++ b/src/Infra/rest-api-template.Infra/rest-api-template.Infra.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Domain\rest-api-template.Domain\rest-api-template.Domain.csproj" />
     <ProjectReference Include="..\..\Domain\rest-api-template.Domain.Core\rest-api-template.Domain.Core.csproj" />
-    <ProjectReference Include = "..\..\Domain\rest-api-template.Domain.Services\rest-api-template.Domain.Services.csproj" />
+    <ProjectReference Include="..\..\Domain\rest-api-template.Domain.Services\rest-api-template.Domain.Services.csproj" />
     <ProjectReference Include="..\..\Application\rest-api-template.Application\rest-api-template.Application.csproj" />
   </ItemGroup>
 
