ConnectionString template added to appsettings.json

--- a/src/Services/rest-api-template.API/appsettings.json
+++ b/src/Services/rest-api-template.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnectionString": "server=localhost;Database=Ecommerce;User=root;Passowrd=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
