--- a/src/Services/rest-api-template.API/rest-api-template.API.csproj
+++ b/src/Services/rest-api-template.API/rest-api-template.API.csproj
@@ -7,10 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.2.0" />
+    <PackageReference Include="AutoFac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-      <ProjectReference Include = "..\..\Infra\rest-api-template.Infra\rest-api-template.Infra.csproj" />
+      <ProjectReference Include="..\..\Infra\rest-api-template.Infra\rest-api-template.Infra.csproj" />
   </ItemGroup>
 </Project>
